# Alan

./: .env.example  .gitignore  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  clippy.toml  justfile  rustfmt.toml
crates/agentd/: Cargo.toml
crates/agentd/src/: main.rs  routes.rs  state.rs  websocket.rs
crates/agentd/src/manager/: agent_manager.rs  instance.rs  mod.rs  workspace_manager.rs
crates/alan/: Cargo.toml
crates/alan/skill_templates/basic-delegate/: SKILL.md
crates/alan/skill_templates/basic-delegate/agents/: openai.yaml
crates/alan/skill_templates/basic-inline/: SKILL.md
crates/alan/src/: host_config.rs  lib.rs  main.rs  registry.rs  skill_catalog.rs
crates/alan/src/cli/: ask.rs  auth.rs  chat.rs  connection.rs  daemon.rs  init.rs  migrate.rs  mod.rs  shell.rs  skill_authoring.rs  skill_eval.rs  skills.rs  workspace.rs
crates/alan/src/daemon/: api_contract.rs  auth_control.rs  auth_routes.rs  connection_api.rs  connection_control.rs  connection_routes.rs  mod.rs  relay.rs  remote_control.rs  routes.rs  runtime_manager.rs  scheduler.rs  server.rs  session_store.rs  state.rs  task_store.rs  websocket.rs  workspace_resolver.rs
crates/alan/src/daemon/manager/: instance.rs  mod.rs
crates/alan/tests/: agent_root_overlay_integration_test.rs  auth_cli_integration_test.rs  compaction_integration_test.rs  daemon_payload_contract_test.rs  event_contract_test.rs  event_sequence_validation_test.rs  integration_event_flow_test.rs  live_runtime_smoke_test.rs  skills_cli_integration_test.rs  smoke_test.rs
crates/auth/: Cargo.toml
crates/auth/src/: chatgpt.rs  lib.rs  pkce.rs  storage.rs  token_data.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic_compatible.rs  anthropic_messages.rs  chatgpt_responses.rs  gemini.rs  google_gemini_generate_content.rs  lib.rs  openai_chat_completions.rs  openai_compatible.rs  openai_responses.rs  openrouter.rs  sse.rs
crates/llm/tests/: live_provider_harness.rs
crates/runtime/: Cargo.toml
crates/runtime/models/: catalog.toml
crates/runtime/prompts/: memory_flush.md  memory_promotion.md  runtime_base.md  system.md
crates/runtime/prompts/persona/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  ROLE.md  SOUL.md  TOOLS.md  USER.md
crates/runtime/skills/alan-shell-control/: SKILL.md
crates/runtime/skills/memory/: SKILL.md
crates/runtime/skills/plan/: SKILL.md
crates/runtime/skills/repo-coding/: SKILL.md  skill.yaml
crates/runtime/skills/repo-coding/agents/: openai.yaml
crates/runtime/skills/repo-coding/agents/repo-worker/: agent.toml  policy.yaml
crates/runtime/skills/repo-coding/evals/: README.md  evals.json  evaluator_cases.json
crates/runtime/skills/repo-coding/evals/files/: benchmark_cases.json  delivery_contract_invalid_passed_with_failure_exit.json  delivery_contract_invalid_test_only_without_reason.json  delivery_contract_valid_environment_blocked.json  delivery_contract_valid_mixed.json  swebench_lite_pilot_v1.ids.txt  swebench_lite_subset.template.json
crates/runtime/skills/repo-coding/references/: delivery_contract.md  evaluator_boundary.md  package.md
crates/runtime/skills/repo-coding/scripts/: check_delivery_contract_examples.sh  check_evaluator_boundaries.sh  check_swebench_harness_env.sh  grade_benchmark_case.sh  prepare_swebench_lite_subset.py  prepare_swebench_lite_workspaces.py  run_benchmark_fixture.sh  run_swebench_full_steward_case.sh  run_swebench_full_steward_subset.sh  score_swebench_predictions.sh  setup_swebench_harness_env.sh  swebench_lite_common.py  validate_delivery_contract.sh
crates/runtime/skills/skill-creator/: SKILL.md  skill.yaml
crates/runtime/skills/skill-creator/agents/: analyzer.md  comparator.md  grader.md  openai.yaml
crates/runtime/skills/skill-creator/agents/skill-creator/: agent.toml
crates/runtime/skills/skill-creator/eval-viewer/: viewer.html
crates/runtime/skills/skill-creator/evals/: evals.json
crates/runtime/skills/skill-creator/references/: authoring.md  openai_yaml.md  schemas.md
crates/runtime/skills/skill-creator/scripts/: aggregate_benchmark.py  example_analyze.py  example_baseline.py  example_candidate.py  example_compare.py  example_grade.py  generate_review.py  init_skill.py  quick_validate.py  run_eval.py
crates/runtime/skills/swebench/: SKILL.md  skill.yaml
crates/runtime/skills/swebench/evals/: README.md
crates/runtime/skills/swebench/references/: package.md
crates/runtime/skills/swebench/scripts/: check_swebench_harness_env.sh  run_swebench_full_steward_case.sh  run_swebench_full_steward_subset.sh  score_swebench_predictions.sh  setup_swebench_harness_env.sh
crates/runtime/skills/swebench/tooling/: Cargo.toml
crates/runtime/skills/swebench/tooling/src/: lib.rs  (+1 more)
crates/runtime/skills/workspace-inspect/: SKILL.md  skill.yaml
crates/runtime/skills/workspace-manager/: SKILL.md
crates/runtime/src/: agent_definition.rs  agent_root.rs  approval.rs  config.rs  connections.rs  lib.rs  llm.rs  models.rs  paths.rs  policy.rs  request_controls.rs  retry.rs  rollout.rs  session.rs  tape.rs  terminology.rs
crates/runtime/src/manager/: mod.rs  state.rs
crates/runtime/src/prompts/: assembler.rs  loader.rs  memory.rs  mod.rs  workspace.rs
crates/runtime/src/runtime/: agent_loop.rs  child_agents.rs  child_runs.rs  compaction.rs  engine.rs  loop_guard.rs  memory_flush.rs  memory_promotion.rs  memory_recall.rs  memory_surfaces.rs  mod.rs  prompt_cache.rs  response_guardrails.rs  submission_handlers.rs  tool_orchestrator.rs  tool_policy.rs  turn_driver.rs  turn_executor.rs  turn_state.rs  turn_support.rs  virtual_tools.rs  virtual_tools_tests.rs
crates/runtime/src/skills/: capability_view.rs  injector.rs  loader.rs  mod.rs  registry.rs  types.rs
crates/runtime/src/tools/: context.rs  mod.rs  registry.rs  sandbox.rs  sandbox_tests.rs
crates/skill-tools/: Cargo.toml
crates/skill-tools/src/: eval.rs  lib.rs  main.rs
crates/skill-tools/tests/: cli_tooling_integration.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
(+805 files in other folders)
