[package]
name = "alan-agentd"
description = "Alan agent daemon (service host)"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
alan-protocol.workspace = true
alan-runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
dotenvy.workspace = true
tokio-stream.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.28"
tempfile.workspace = true
