[package]
name = "alan"
description = "Alan — AI Turing Machine CLI & daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "alan"
path = "src/lib.rs"

[[bin]]
name = "alan"
path = "src/main.rs"

[dependencies]
alan-protocol.workspace = true
alan-runtime.workspace = true
alan-tools.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
tokio-stream.workspace = true
dirs.workspace = true
chrono.workspace = true
sha2.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest.workspace = true
tokio-tungstenite = "0.28"

[dev-dependencies]
alan-llm = { workspace = true, features = ["mock"] }
alan-runtime = { workspace = true, features = ["mock"] }
tempfile.workspace = true
