[package]
name = "alan-llm"
description = "LLM providers and protocol adapters for Alan"
version.workspace = true
edition.workspace = true

[features]
default = []
mock = []

[dependencies]
alan-auth.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# SSE streaming
eventsource-stream.workspace = true
futures-core.workspace = true
pin-utils.workspace = true

[dev-dependencies]
axum.workspace = true
base64.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
