[package]
name = "alan-runtime"
description = "Core runtime for the Alan agent"
version.workspace = true
edition.workspace = true

[dependencies]
alan-protocol.workspace = true
alan-llm.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "1.0"
jsonschema.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
futures.workspace = true
urlencoding.workspace = true
chrono.workspace = true
dirs.workspace = true
sha2.workspace = true
dunce.workspace = true
async-trait.workspace = true
regex.workspace = true
glob = "0.3"
rand.workspace = true

# SSE streaming
eventsource-stream.workspace = true
futures-core.workspace = true
pin-utils.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile.workspace = true
alan-llm = { workspace = true, features = ["mock"] }

[features]
default = []
mock = ["alan-llm/mock"]
