[package]
name = "alan-tools"
description = "Builtin tool implementations for the Alan agent runtime"
version.workspace = true
edition.workspace = true

[dependencies]
alan-runtime.workspace = true
alan-protocol.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
glob = "0.3"
dunce.workspace = true

[dev-dependencies]
tempfile.workspace = true
